@@ -20,6 +20,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <syslog.h>
+#include <errno.h>
 
 #ifdef DEBUG
 #include <sys/types.h>
@@ -33,15 +34,60 @@ char *__argv0;
 int dbg_lvl;
 int log_to_stderr;
 static int log_facility=LOG_DAEMON;
+int log_file_opened=0;
+FILE *log_file, *log_fd;
 
 void log_init(char *prog, int dbg, int log_stderr)
 {
 	__argv0=prog;
 	dbg_lvl=dbg;
 	log_to_stderr=log_stderr;
+	if(log_stderr)
+		log_fd=stderr;
+	if(!log_file_opened)
+		log_file=0;
 
 	if(!log_to_stderr)
 		openlog(__argv0, dbg ? LOG_PID : 0, log_facility);
+}
+
+/*
+ * log_to_file
+ *
+ * If `filename' is not null, it is opened and set as the logfile.
+ * When `filename' is null, it just updates the `log_fd' global variable.
+ * 
+ * On errors it returns -1;
+ */
+int log_to_file(char *filename)
+{
+	if(!filename) {
+		if(log_file)
+			log_fd=log_file;
+		else
+			return -1;
+		return 0;
+	}
+
+	if(!(log_file=fopen(filename, "w"))) {
+		log_fd=stderr;
+		error("Cannot open the \"%s\" logfile: %s", 
+				filename, strerror(errno));
+		return -1;
+	}
+
+	log_fd=log_file;
+	log_file_opened=1;
+
+	return 0;
+}
+
+void close_log_file(void)
+{
+	if(log_file) {
+		fflush(log_file);
+		fclose(log_file);
+	}
 }
 
 /* Life is fatal! */
@@ -50,18 +96,23 @@ void fatal(const char *fmt,...)
 	char str[strlen(fmt)+3];
 	va_list args;
 
-	str[0]='!';
-	str[1]=' ';
-	strncpy(str+2, fmt, strlen(fmt));
-	str[strlen(fmt)+2]=0;
+	if(fmt) {
+		str[0]='!';
+		str[1]=' ';
+		strncpy(str+2, fmt, strlen(fmt));
+		str[strlen(fmt)+2]=0;
 
-	va_start(args, fmt);
-	print_log(LOG_CRIT, str, args);
-	va_end(args);
+		va_start(args, fmt);
+		print_log(LOG_CRIT, str, args);
+		va_end(args);
+	}
 
-	if(log_to_stderr)
-		/* Flush stderr if we want to read something */
-		fflush(stderr);
+	/** Flush the stream if we want to read something */
+	if(log_to_stderr || log_file)
+		fflush(log_fd);
+	if(log_file)
+		close_log_file();
+	/**/
 
 #ifdef DEBUG
 	/* Useful to catch the error in gdb */
@@ -127,10 +178,9 @@ void debug(int lvl, const char *fmt,...)
 
 void print_log(int level, const char *fmt, va_list args)
 {
-	
-	if(log_to_stderr) {
-		vfprintf(stderr, fmt, args);
-		fprintf(stderr, "\n");
+	if(log_to_stderr || log_file) {
+		vfprintf(log_fd, fmt, args);
+		fprintf(log_fd, "\n");
 	} else
 		vsyslog(level | log_facility, fmt, args);
 }
